# Interconnect-Analysis-5LIE0

./: .gitignore  README.md
backups/: NetworkFatTree3LayerDegree2.poosl  instances.poosl
deliverables/model/: .project  bus.poosl  topologytemplate.poosl
deliverables/model/bus/: BusBasedNetwork.poosl  NetworkInterface.poosl
deliverables/model/common/: Fifo.poosl  Flit.poosl  Node.poosl  XYCoords.poosl  monitors.poosl  nodecoordination.poosl
deliverables/model/fattree/: FatTree2LayerDegree2.poosl  FatTree3LayerDegree2.poosl  (+4 more)
deliverables/sweep/: .gitignore  README.md  pyproject.toml
deliverables/sweep/templates/: mesh_template.poosl  tree_layers_template.poosl
model/: fattree.poosl  mesh.poosl
model/bus/: Arbiter.poosl  BusRequests.poosl  RoundRobinArbiterPolicy.poosl  instances.poosl
model/common/: ConsoleWriter.poosl  NetworkInterface.poosl  packet.poosl
model/fattree/: FatTree4LayerDegree2.poosl  FatTree5LayerDegree2.poosl  FatTreeDegree2T25.poosl  FatTreeDegree4T25.poosl  FatTreeDegree5T25.poosl  NetworkFatTree2LayerDegree2.poosl  NetworkFatTree4LayerDegree2.poosl  NetworkFatTree5LayerDegree2.poosl  NetworkFatTreeDegree4T25.poosl  instances.poosl
model/libraries/: performance.poosl
model/mesh/: Mesh8x8.poosl  MeshBasedNetwork8x8.poosl  OddRouter.poosl  Router.poosl
model/topologytemplate/: CRouter_3Ports.poosl  CRouter_4Ports.poosl  RandomRouter_2Ports.poosl  RandomRouter_4Ports.poosl  TemplateNetwork.poosl
sweep/: analysis.ipynb  run_network_model.py
sweep/Rotalumis/: rotalumisrunner.py
sweep/templates/: bus_template.poosl
(+47 files in other folders)
